feat + test (BoardHelper + BoardBuilder) : Mise en place du BoardHelper et test de celui-ci